force-app/main/default/objects/Grid_Configuration__c/Grid_Configuration__c.object-meta.xml
<CustomObject>
    <label>Grid Configuration</label>
    <nameField>
        <label>Grid Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grid Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>