force-app/main/default/objects/Grid_Configuration__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fiscal Year</label>
    <referenceTo>Fiscal_Year__c</referenceTo>
    <relationshipLabel>Grid Configurations</relationshipLabel>
    <relationshipName>Grid_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>