force-app/main/default/objects/Grid_Configuration__c/fields/Goal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Goal_End_Date__c</fullName>
    <label>Goal End Date</label>
    <type>Date</type>
</CustomField>