force-app/main/default/objects/Grid_Configuration__c/fields/Goal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Goal_Start_Date__c</fullName>
    <label>Goal Start Date</label>
    <type>Date</type>
</CustomField>