force-app/main/default/objects/Grid_Configuration__c/fields/Grid_Configuration_Type__c.field-meta.xml
<CustomField>
    <fullName>Grid_Configuration_Type__c</fullName>
    <label>Grid Configuration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Welcome aboard</fullName>
            </value>
            <value>
                <fullName>PF Forms</fullName>
            </value>
            <value>
                <fullName>Documents</fullName>
            </value>
            <value>
                <fullName>Company Policies</fullName>
            </value>
            <value>
                <fullName>Company Information - EMP- Onboarding</fullName>
            </value>
            <value>
                <fullName>Company Information - Pre-Onboarding</fullName>
            </value>
            <value>
                <fullName>Org Level Goal</fullName>
            </value>
            <value>
                <fullName>Resource Role Level Goal</fullName>
            </value>
            <value>
                <fullName>Org Level Alert</fullName>
            </value>
            <value>
                <fullName>Resource Role Alert</fullName>
            </value>
            <value>
                <fullName>KRA</fullName>
            </value>
            <value>
                <fullName>Annual Award</fullName>
            </value>
            <value>
                <fullName>Annual Award Result</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>