force-app/main/default/objects/Grid_Configuration__c/fields/is_Navigation_Required__c.field-meta.xml
<CustomField>
    <fullName>is_Navigation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Navigation Required</label>
    <type>Checkbox</type>
</CustomField>