force-app/main/default/objects/Grid_Configuration__c/fields/KRA_Area__c.field-meta.xml
<CustomField>
    <fullName>KRA_Area__c</fullName>
    <label>KRA Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>KRA_Area</valueSetName>
    </valueSet>
</CustomField>