force-app/main/default/objects/Grid_Configuration__c/fields/KRA_Competency__c.field-meta.xml
<CustomField>
    <fullName>KRA_Competency__c</fullName>
    <label>KRA Competency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>KRA_Competency</valueSetName>
    </valueSet>
</CustomField>