force-app/main/default/objects/Grid_Configuration__c/fields/KRA_Competency_Example__c.field-meta.xml
<CustomField>
    <fullName>KRA_Competency_Example__c</fullName>
    <label>KRA Competency Example</label>
    <type>TextArea</type>
</CustomField>