force-app/main/default/objects/Grid_Configuration__c/fields/KRA_Competency_Overview__c.field-meta.xml
<CustomField>
    <fullName>KRA_Competency_Overview__c</fullName>
    <label>KRA Competency Overview</label>
    <type>TextArea</type>
</CustomField>