force-app/main/default/objects/Grid_Configuration__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alert</fullName>
            </value>
            <value>
                <fullName>Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>