force-app/main/default/objects/Grid_Configuration__c/fields/Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>Resource_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Role</label>
    <referenceTo>Resource_Role__c</referenceTo>
    <relationshipLabel>Grid Configurations</relationshipLabel>
    <relationshipName>Grid_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>