force-app/main/default/objects/Grid_Configuration__c/fields/Show_Winners__c.field-meta.xml
<CustomField>
    <fullName>Show_Winners__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Winners</label>
    <type>Checkbox</type>
</CustomField>