force-app/main/default/objects/Grid_Configuration__c/validationRules/Check_the_Notrequired_for_OtherTypes.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_the_Notrequired_for_OtherTypes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(TEXT(Grid_Configuration_Type__c) == &quot;Org Level Goal&quot;),
NOT(TEXT(Grid_Configuration_Type__c) == &quot;Resource Role Level Goal&quot;),
NOT(TEXT(Grid_Configuration_Type__c) == &quot;Resource Role Alert&quot;),
NOT(TEXT(Grid_Configuration_Type__c) == &quot;Org Level Alert&quot;),
OR(
NOT(ISNULL(Goal_Start_Date__c)),
NOT(ISBLANK(Goal_End_Date__c)),
NOT(ISBLANK( Resource_Role__c ))
)
)</errorConditionFormula>
    <errorMessage>Please clear the Resource Role, Goal Start Date, Goal End Date those fields are allowed only for Org Level and Resource Role Level Types</errorMessage>
</ValidationRule>