force-app/main/default/objects/Grid_Configuration__c/validationRules/Check_the_required_for_Resource_Goals.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_the_required_for_Resource_Goals</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Grid_Configuration_Type__c) == &quot;Resource Role Level Goal&quot;,
OR(
ISBLANK(Description__c),
ISNULL(Goal_Start_Date__c),
ISBLANK(Goal_End_Date__c),
ISBLANK(Name),
ISBLANK( Resource_Role__c )
)
)</errorConditionFormula>
    <errorMessage>Name, Description, Resource Role, Goal Start Date, and Goal End Date are required when the configuration type is Org level goal.</errorMessage>
</ValidationRule>