force-app/main/default/objects/Grid_Configuration__c/validationRules/Navigation_Address_is_Requried.validationRule-meta.xml
<ValidationRule>
    <fullName>Navigation_Address_is_Requried</fullName>
    <active>true</active>
    <errorConditionFormula>is_Navigation_Required__c &amp;&amp; ISBLANK( Navigation_address__c )</errorConditionFormula>
    <errorMessage>Navigation address is required</errorMessage>
</ValidationRule>