force-app/main/default/objects/Grid_Configuration__c/validationRules/Start_Date_should_be_in_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_should_be_in_Future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Goal_Start_Date__c )),
OR (
Goal_Start_Date__c &lt;= today(),
Goal_Start_Date__c &gt; Goal_End_Date__c 
)
)</errorConditionFormula>
    <errorMessage>Start date should be in future and start date should be less than end date</errorMessage>
</ValidationRule>