force-app/main/default/objects/Grid_Configuration__c/listViews/Alert_Configurations.listView-meta.xml
<ListView>
    <fullName>Alert_Configurations</fullName>
    <columns>NAME</columns>
    <columns>Grid_Configuration_Type__c</columns>
    <columns>Goal_Start_Date__c</columns>
    <columns>Goal_End_Date__c</columns>
    <columns>Resource_Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Grid_Configuration_Type__c</field>
        <operation>equals</operation>
        <value>Org Level Alert,Resource Role Alert</value>
    </filters>
    <label>Alert Configurations</label>
</ListView>