force-app/main/default/objects/Grid_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Goal_Start_Date__c</columns>
    <columns>Goal_End_Date__c</columns>
    <columns>Grid_Configuration_Type__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>