force-app/main/default/objects/Grid_Configuration__c/listViews/Goal_Configurations.listView-meta.xml
<ListView>
    <fullName>Goal_Configurations</fullName>
    <columns>NAME</columns>
    <columns>Grid_Configuration_Type__c</columns>
    <columns>Goal_Start_Date__c</columns>
    <columns>Goal_End_Date__c</columns>
    <columns>Resource_Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>Goal Configurations</label>
</ListView>