force-app/main/default/objects/Grid_Configuration__c/listViews/KRA_Configurations.listView-meta.xml
<ListView>
    <fullName>KRA_Configurations</fullName>
    <columns>NAME</columns>
    <columns>Grid_Configuration_Type__c</columns>
    <columns>Resource_Role__c</columns>
    <columns>KRA_Area__c</columns>
    <columns>KRA_Competency__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Grid_Configuration_Type__c</field>
        <operation>equals</operation>
        <value>KRA</value>
    </filters>
    <label>KRA Configurations</label>
</ListView>