force-app/main/default/objects/Grid_Configuration__c/listViews/Onboarding_Configurations.listView-meta.xml
<ListView>
    <fullName>Onboarding_Configurations</fullName>
    <columns>NAME</columns>
    <columns>Grid_Configuration_Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>Onboarding Configurations</label>
</ListView>